--- a/alire.toml
+++ b/alire.toml
@@ -9,11 +9,13 @@ authors = ["onox"]
 maintainers = ["onox <denkpadje@gmail.com>"]
 maintainers-logins = ["onox"]
 
-configuration.disabled = true
-
 [available.'case(os)']
 linux = true
 '...' = false
+
+[build-switches]
+validation.compile_checks = "warnings"
+"*".style_checks = ["-gnatygAO-Is"]
 
 [gpr-set-externals]
 CANBERRA_ADA_LIBRARY_TYPE = "static-pic"
