--- a/alire.toml
+++ b/alire.toml
@@ -15,7 +15,7 @@ linux = true
 
 [build-switches]
 validation.compile_checks = "warnings"
-"*".style_checks = ["-gnatygAO-Is"]
+"*".style_checks = ["-gnatygAOM99-Is"]
 
 [gpr-set-externals]
 CANBERRA_ADA_LIBRARY_TYPE = "static-pic"
